# ChangeLog for dev-python/lettuce
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jan 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.17.ebuild:
  Keyworded amd64.

*lettuce-0.1.17 (02 Dec 2010)

  02 Dec 2010; James Rowe <jnrowe@gmail.com> +lettuce-0.1.17.ebuild:
  Version bump [236].

  02 Dec 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.14.ebuild,
  lettuce-0.1.15.ebuild:
  Keyworded x86.

  01 Dec 2010; James Rowe <jnrowe@gmail.com> lettuce-0.1.15.ebuild:
  Keyworded amd64.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

*lettuce-0.1.15 (31 Oct 2010)

  31 Oct 2010; James Rowe <jnrowe@gmail.com> +lettuce-0.1.15.ebuild:
  Version bump [210].

  15 Oct 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.13.ebuild,
  lettuce-0.1.14.ebuild:
  Keyworded x86.

  15 Oct 2010; James Rowe <jnrowe@gmail.com> lettuce-0.1.14.ebuild:
  Keyworded amd64.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  25 Sep 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.12.ebuild,
  lettuce-0.1.13.ebuild:
  Keyworded x86.

  24 Sep 2010; James Rowe <jnrowe@gmail.com> lettuce-0.1.13.ebuild:
  Keyworded amd64.

  20 Sep 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.11.ebuild,
  lettuce-0.1.12.ebuild:
  Keyworded x86.

  20 Sep 2010; James Rowe <jnrowe@gmail.com> lettuce-0.1.12.ebuild:
  Keyworded amd64.

  16 Sep 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.10.ebuild,
  lettuce-0.1.11.ebuild:
  Keyworded x86.

  16 Sep 2010; James Rowe <jnrowe@gmail.com> lettuce-0.1.11.ebuild:
  Keyworded amd64.

*lettuce-0.1.14 (15 Sep 2010)

  15 Sep 2010; James Rowe <jnrowe@gmail.com> +lettuce-0.1.14.ebuild:
  Version bump [#175].

  09 Sep 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.9.ebuild,
  lettuce-0.1.10.ebuild:
  Keyworded x86.

  09 Sep 2010; James Rowe <jnrowe@gmail.com> lettuce-0.1.10.ebuild:
  Keyworded amd64.
