@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST lettuce-0.1.15.tar.gz 62525 RMD160 f20cb51baed0f493e804a8d230fc04a393bc5ccd SHA1 529a2645de1db794780e267ec2a1ff0f50a8e641 SHA256 6431a9c3247e1c8a69c1e6561464224823f1af46474d7af6a2eb9b934067d871
 DIST lettuce-0.1.17.tar.gz 63701 RMD160 ad75b9715d4b415238f96f23409ae209f097bde6 SHA1 6520b4f1fc1132102e6a5def2c4b62e7dd246660 SHA256 53d18f0c3de1319cd9df104f1a4e3b65a99d2523417d7f27f1c139d5add12c21
-EBUILD lettuce-0.1.15.ebuild 527 RMD160 6b2642a38bbc5ad86f92f053bbda9e0d4dccfd45 SHA1 5bada943e37eb1b1a2bd97e9168738ec61d22225 SHA256 bb893e25d25a06d77b3502b08ed47a79b918ca16c910a8edb5659829c6727842
-EBUILD lettuce-0.1.17.ebuild 528 RMD160 87a564574986cba8309ae3fb4b9ac850ec381092 SHA1 f5f7f2e9f8fec0fe47654308f907481a7b6b6d19 SHA256 6cddaf497cecb3ba7503abb208dbf2aa6817ff4669706f71dc9e5dd2ec4099f8
-MISC ChangeLog 4314 RMD160 a9fcaa0c08cdb94eb45bb2d09f9d6e1608b86db0 SHA1 5bb313ff85a4f901da8bfa8834237fe361cae409 SHA256 4d43cf0053c06042a7f286cf2b436c0bcb43e61f6ba4aa29eedf15ed8411250d
+EBUILD lettuce-0.1.17.ebuild 527 RMD160 6b2642a38bbc5ad86f92f053bbda9e0d4dccfd45 SHA1 5bada943e37eb1b1a2bd97e9168738ec61d22225 SHA256 bb893e25d25a06d77b3502b08ed47a79b918ca16c910a8edb5659829c6727842
+MISC ChangeLog 4426 RMD160 8a018b6358f430d2a96251f13d4e6e03dc016830 SHA1 230233db2a5c9f5b0c89ae70dc61cb324d5519f7 SHA256 272316cf3775331d4f074f9bfa4391ec44e64a623957a443dac135d5bf272151
 MISC metadata.xml 543 RMD160 ba3769e47c6fd85b04b312ae9e19f0b7df54d047 SHA1 9348d7b60519187a8c2634ed087236ae176d3c9b SHA256 ea4a59405434a4b345393c1bc788273477110612782560fa496f8e92c5357db3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0oAbEACgkQzJrj3cAXR0muaACePlqIGc8ULHDT37Zqdhzzk2Lg
-ADYAn21c8JUk+H6xF3dojpetxR1K8JRL
-=TxHI
+iEYEARECAAYFAk0ppAIACgkQzJrj3cAXR0lYdwCdGiARUOA9XkpMdFy+UGhUIKvs
+BaYAnj/8KZdECy2p72LkjmswC0pDu0Oi
+=o7A/
 -----END PGP SIGNATURE-----
