@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jan 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.15.ebuild,
+  lettuce-0.1.17.ebuild:
+  Keyworded x86.
+
   08 Jan 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.17.ebuild:
   Keyworded amd64.
 
